@@ -1,6 +1,6 @@
 .TH AL175 8 "Wed Sep 21 2005" "" "Network UPS Tools (NUT)" 
 .SH NAME  
-al175 \(hy Driver for Eltek UPS models with AL175 alarm module
+al175 \- Driver for Eltek UPS models with AL175 alarm module
 .SH NOTE
 This man page only documents the hardware\(hyspecific features of the
 al175 driver. For information about the core driver, see  
