@@ -1,6 +1,6 @@
 .TH MEGATEC 8 "Sat Jan 14 2006" "" "Network UPS Tools (NUT)" 
 .SH NAME  
-megatec \(hy Driver for Megatec protocol based UPS equipment
+megatec \- Driver for Megatec protocol based UPS equipment
 .SH NOTE
 This man page only documents the hardware\(hyspecific features of the
 megatec driver. For information about the core driver, see  
